# ouroboros

./: .bandit.yaml  .env.example  .gitignore  .pre-commit-config.yaml  404.html  ADAPTIVE_SAMPLING.md  AGENT_FRAMEWORK_STATUS.md  CHANGE_TRACKING_IMPLEMENTATION.md  CLAUDE.md  Cargo.toml  DEVELOPMENT.md  GEMINI.md  ISSUES.md  MIGRATION_MAP.md  MONGODB_UPDATE_OPERATIONS.md  PHASE2_LAZY_LOADING_IMPLEMENTATION.md  PHASE4_IMPLEMENTATION_SUMMARY.md  PHASE5_IMPLEMENTATION_COMPLETE.md  PHASE5_SUMMARY.md  PHASE7_IMPLEMENTATION_SUMMARY.md  PYLOOP_PHASE2_3_SUMMARY.md  PYLOOP_PHASE2_4_SUMMARY.md  PYLOOP_PHASE2_SUMMARY.md  PYLOOP_PHASE3.1.1_SUMMARY.md  PYLOOP_PHASE3.1.3_SUMMARY.md  PYLOOP_PHASE3.1.4_SUMMARY.md  PYLOOP_PHASE3_CRUD_SUMMARY.md  PYLOOP_PHASE3_SUMMARY.md  PYLOOP_PHASE4_FILES.md  QUICKSTART.md  README.md  TESTING.md  TODOS.md  clippy.toml  compose.yaml  deny.toml  index.html  justfile  kv_benchmark_concurrent_fixed.html  kv_benchmark_concurrent_fixed.json  (+10 more)
crates/argus/: Cargo.toml
crates/argus/benches/: daemon_bench.rs  performance.rs
crates/argus/benchmarks/: README.md  baseline_20260121.json
crates/argus/src/: diagnostic.rs  error.rs  lib.rs  output.rs  watch.rs
crates/argus/tests/: integration_env_test.rs  test_deep_inference.rs  test_django_type_provider.rs  test_framework_detection.rs  test_framework_integration.rs  test_framework_package_manager_integration.rs  test_incremental_analysis.rs  test_p0_integration.rs  test_package_managers.rs  test_refactoring_advanced.rs  test_refactoring_ast.rs  test_refactoring_extract.rs  test_refactoring_rename.rs  test_semantic_search_integration.rs
crates/data-bridge/: Cargo.toml
crates/data-bridge-api/: Cargo.toml  PYTHON_INTEGRATION.md  SERVER_README.md  TODOS.md
crates/data-bridge-api/examples/: form_upload_example.rs  openapi_example.rs  python_handler_example.rs  simple_server.rs  sse_example.rs  validation_example.rs
crates/data-bridge-api/src/: app.rs  error.rs  extractors.rs  handler.rs  lib.rs  middleware.rs  python_handler.rs  request.rs  response.rs  router.rs  server.rs  sse.rs  telemetry.rs  validation.rs  websocket.rs
crates/data-bridge-kv/: Cargo.toml  kv_benchmark_report.html  kv_benchmark_report.json  kv_benchmark_report.md  todos.md
crates/data-bridge-kv-client/: Cargo.toml  README.md
crates/data-bridge-kv-client/examples/: basic_usage.rs  pool_example.rs
crates/data-bridge-kv-client/src/: client.rs  lib.rs  pool.rs  protocol.rs
crates/data-bridge-kv-server/: Cargo.toml  QUICK_START.md
crates/data-bridge-kv-server/src/: main.rs  protocol.rs  server.rs
crates/data-bridge-kv-server/tests/: integration_test.rs
crates/data-bridge-kv/benches/: batch_operations.rs  kv_bench.rs  kv_benchmark.rs
crates/data-bridge-kv/examples/: batch_operations.rs  diagnose_contention.rs  kv_benchmark_concurrent.rs
crates/data-bridge-kv/src/: engine.rs  error.rs  lib.rs
crates/data-bridge-kv/tests/: persistence_integration.rs
crates/data-bridge-postgres/: Cargo.toml  PANIC_SAFETY.md  PASSWORD_SECURITY.md  README.md  SECURITY_ERROR_MESSAGES.md  SQL_INJECTION_AUDIT.md  TODOS.md
crates/data-bridge-postgres/benches/: main.rs
crates/data-bridge-postgres/src/: connection.rs  lib.rs  migration.rs  query.rs  row.rs  schema.rs  transaction.rs  types.rs  validation.rs
crates/data-bridge-postgres/tests/: test_benchmark.rs  test_fuzzing.rs  test_migration.rs  test_relations.rs  test_row_crud.rs  test_schema.rs  test_security.rs
crates/data-bridge-pyloop/: Cargo.toml  README.md
crates/data-bridge-pyloop/src/: error.rs  future.rs  handle.rs  lib.rs  loop_impl.rs  task.rs  timer_wheel.rs
crates/data-bridge-sheet-db/: Cargo.toml  todos.md
crates/data-bridge-sheet-db/src/: lib.rs
crates/data-bridge-sheet-formula/: Cargo.toml
crates/data-bridge-sheet-formula/src/: ast.rs  dependency.rs  evaluator.rs  lexer.rs  lib.rs  parser.rs  parser_nom.rs  reference_shifter.rs
crates/data-bridge-sheet-history/: Cargo.toml
crates/data-bridge-sheet-history/src/: command.rs  stack.rs
crates/data-bridge-test/: Cargo.toml  FIXTURES.md  IMPLEMENTATION_SUMMARY.md  TODOS.md
crates/data-bridge-test/benches/: discovery_benchmark.rs  serialization_benchmark.rs
crates/data-bridge-test/docs/: boundary-tracing.md
crates/data-bridge-test/examples/: README.md  adaptive_benchmark_demo.rs  async_fuzzing_example.rs  baseline_demo.rs  boundary_tracing.rs  junit_reporter_example.rs  latency_percentiles_demo.rs  payload_database_example.rs
crates/data-bridge-test/src/: assertions.rs  baseline.rs  benchmark.rs  discovery.rs  fixtures.rs  hooks.rs  lib.rs  reporter.rs  runner.rs
crates/data-bridge-test/tests/: async_fuzzing_test.rs  junit_example.rs
crates/data-bridge/src/: api.rs  config.rs  conversion.rs  http.rs  kv.rs  lib.rs  mongodb.rs  postgres.rs  pyloop.rs  tasks.rs  test.rs  types.rs  validation.rs
crates/ouroboros-agent-core/: Cargo.toml
crates/ouroboros-agent-core/src/: agent.rs  context.rs  error.rs  executor.rs  lib.rs  state.rs  types.rs
crates/ouroboros-agent-llm/: CLAUDE_TODO.md  Cargo.toml
crates/ouroboros-agent-llm/src/: claude.rs  error.rs  lib.rs  openai.rs  provider.rs
crates/ouroboros-agent-tools/: Cargo.toml
crates/ouroboros-agent-tools/src/: error.rs  executor.rs  lib.rs  registry.rs  tool.rs
crates/ouroboros-api/: Cargo.toml  README.md
crates/ouroboros-api/examples/: auth_example.rs  form_upload_example.rs  lifecycle_example.rs  middleware_example.rs  openapi_example.rs  python_handler_example.rs  rate_limit_example.rs  simple_server.rs  sse_example.rs  validation_example.rs  websocket_example.rs
crates/ouroboros-cli/: Cargo.toml  build.rs
crates/ouroboros-common/: Cargo.toml
crates/ouroboros-http/: Cargo.toml
crates/ouroboros-kv/: Cargo.toml
crates/ouroboros-kv-client/: Cargo.toml
crates/ouroboros-kv-server/: Cargo.toml
crates/ouroboros-mongodb/: Cargo.toml
crates/ouroboros-pyloop/: Cargo.toml
crates/ouroboros-sheet-db/: Cargo.toml
crates/ouroboros-sheet-formula/: Cargo.toml
crates/ouroboros-sheet-history/: Cargo.toml
crates/ouroboros-talos-asset/: Cargo.toml
(+1581 files in other folders)
