[workspace]
members = [
    "crates/data-bridge",
    "crates/data-bridge-mongodb",
    "crates/data-bridge-postgres",
    "crates/data-bridge-http",
    "crates/data-bridge-test",
    "crates/data-bridge-common",
    "crates/data-bridge-tasks",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["Tech Platform Team <tech-platform@shopee.com>"]
edition = "2021"
license = "MIT"
repository = "https://github.com/your-org/data-bridge"

[workspace.dependencies]
# Python bindings (upgraded to 0.24 for RUSTSEC-2025-0020 fix)
pyo3 = { version = "0.24", features = ["extension-module", "abi3-py312"] }
pyo3-async-runtimes = { version = "0.24", features = ["tokio-runtime"] }

# Async runtime
tokio = { version = "1.40", features = ["full"] }
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# MongoDB (for data-bridge-mongodb crate)
mongodb = { version = "3.1" }
bson = { version = "2.13", features = ["chrono-0_4"] }

# HTTP (for data-bridge-http crate)
reqwest = { version = "0.12", features = ["json", "cookies", "gzip", "brotli", "multipart"] }
http = "1.2"
url = "2.5"
bytes = "1.9"

# HTTP Server (for test server)
axum = "0.8"
tower = "0.5"

# Efficient serde <-> Python conversion
pythonize = "0.24"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = "0.3"
regex = "1.11"
rayon = "1.10"
once_cell = "1.20"
walkdir = "2.5"

# Task queue (for data-bridge-tasks crate)
dashmap = "6.1"
async-nats = "0.38"
deadpool-redis = "0.18"
cron = "0.12"
tokio-util = { version = "0.7", features = ["rt"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
