[workspace]
members = [
    "crates/ouroboros",
    "crates/ouroboros-cli",
    "crates/argus",
    "crates/ouroboros-mongodb",
    "crates/ouroboros-postgres",
    "crates/ouroboros-http",
    "crates/ouroboros-qc",
    "crates/ouroboros-common",
    "crates/ouroboros-kv",
    "crates/ouroboros-kv-server",
    "crates/ouroboros-kv-client",
    "crates/ouroboros-api",
    "crates/ouroboros-tasks",
    "crates/ouroboros-pyloop",
    "crates/ouroboros-validation",
    "crates/ouroboros-sheet-core",
    "crates/ouroboros-sheet-db",
    "crates/ouroboros-sheet-formula",
    "crates/ouroboros-sheet-history",
    "crates/ouroboros-sheet-server",
    "crates/ouroboros-sheet-wasm",
    "crates/ouroboros-agent-core",
    "crates/ouroboros-agent-llm",
    "crates/ouroboros-agent-tools",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["Tech Platform Team <tech-platform@shopee.com>"]
edition = "2021"
license = "MIT"
repository = "https://github.com/chrischeng-c4/ouroboros"

[workspace.dependencies]
# Python bindings (upgraded to 0.24 for RUSTSEC-2025-0020 fix)
# NOTE: Do NOT add "extension-module" here - it should only be in the final Python extension crate
pyo3 = { version = "0.24", features = ["abi3-py312"] }
pyo3-async-runtimes = { version = "0.24", features = ["tokio-runtime"] }

# Async runtime
tokio = { version = "1.40", features = ["full"] }
futures = "0.3"
once_cell = "1.20"  # For static initialization

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# MongoDB (for ouroboros-mongodb crate)
mongodb = { version = "3.1" }
bson = { version = "2.13", features = ["chrono-0_4"] }

# HTTP (for ouroboros-http crate)
reqwest = { version = "0.12", features = ["json", "cookies", "gzip", "brotli", "multipart"] }
http = "1.2"
url = "2.5"
bytes = "1.9"

# HTTP Server (for test server and ouroboros-api)
axum = { version = "0.8", features = ["ws"] }
tower = "0.5"
tower-http = { version = "0.5", features = ["cors", "compression-gzip", "trace"] }
tokio-tungstenite = "0.26"
async-stream = "0.3"

# API framework
utoipa = "4"
matchit = "0.7"

# Efficient serde <-> Python conversion
pythonize = "0.24"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = "0.3"
regex = "1.11"
rayon = "1.10"
walkdir = "2.5"
jwalk = "0.8"
parking_lot = "0.12"
rust_decimal = { version = "1.36", features = ["serde"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Form data parsing
multer = "3.1"
urlencoding = "2"
futures-util = "0.3"

# Task queue (for ouroboros-tasks crate)
dashmap = "6.1"
async-nats = "0.38"
deadpool-redis = "0.18"
cron = "0.12"
tokio-util = { version = "0.7", features = ["rt"] }

# LLM providers (for ouroboros-agent-llm crate)
async-openai = "0.27"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
