[package]
name = "data-bridge-api"
version = "0.1.0"
edition = "2021"
description = "High-performance API framework with Rust backend"
license = "MIT OR Apache-2.0"
rust-version = "1.70"

[dependencies]
# Core
tokio = { workspace = true }
async-trait = "0.1"
thiserror = { workspace = true }

# HTTP server
axum = { workspace = true }
tower = { workspace = true }
tower-http = { version = "0.5", features = ["cors", "compression-gzip", "trace"] }
hyper = { version = "1.0", features = ["full"] }
http = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
sonic-rs = "0.3"  # 3-7x faster JSON serialization
serde_yaml = "0.9"
base64 = "0.22"

# OpenAPI
utoipa = "4"

# Routing
matchit = "0.7"  # Radix tree router

# Logging
tracing = { workspace = true }

# Validation
regex = "1"
once_cell = "1"

# Internal
data-bridge-common = { path = "../data-bridge-common" }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
