[package]
name = "data-bridge-api"
version = "0.1.0"
edition = "2021"
description = "High-performance API framework with Rust backend"
license = "MIT OR Apache-2.0"
rust-version = "1.70"

[dependencies]
# Core
tokio = { workspace = true }
async-trait = "0.1"
thiserror = { workspace = true }

# HTTP server
axum = { workspace = true }
tower = { workspace = true }
tower-http = { version = "0.5", features = ["cors", "compression-gzip", "trace"] }
hyper = { version = "1.0", features = ["full"] }
hyper-util = { version = "0.1", features = ["tokio", "server", "http1"] }
http-body-util = "0.1"
http = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
sonic-rs = "0.3"  # 3-7x faster JSON serialization
serde_yaml = "0.9"
base64 = "0.22"
bytes = "1.10"  # Zero-copy byte operations

# OpenAPI
utoipa = "4"

# Routing
matchit = "0.7"  # Radix tree router

# Logging & Observability
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-opentelemetry = "0.22"
opentelemetry = "0.21"
opentelemetry_sdk = { version = "0.21", features = ["rt-tokio"] }
opentelemetry-otlp = "0.14"

# Validation
regex = "1"
once_cell = "1"

# Form data parsing
multer = { workspace = true }
urlencoding = { workspace = true }
futures-util = { workspace = true }

# Python integration
pyo3 = { workspace = true }

# Internal
data-bridge-common = { path = "../data-bridge-common" }
data-bridge-pyloop = { path = "../data-bridge-pyloop" }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
tracing-subscriber = "0.3"
