[package]
name = "data-bridge-kv-client"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "TCP client for data-bridge KV store server"

[dependencies]
# Async runtime
tokio.workspace = true

# Error handling
thiserror.workspace = true

# Shared types
data-bridge-kv = { path = "../data-bridge-kv" }

# High-precision numeric
rust_decimal = { version = "1.36", features = ["serde"] }

[dev-dependencies]
tokio-test = "0.4"
