[package]
name = "data-bridge-sheet-db"
version = "0.1.0"
edition = "2021"

[dependencies]
data-bridge-kv = { path = "../data-bridge-kv" }
data-bridge-sheet-core = { path = "../data-bridge-sheet-core" }
data-bridge-common = { path = "../data-bridge-common" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1.40", features = ["full"] }
rayon = "1.10"
bincode = "1.3"

[dev-dependencies]
tempfile = "3.8"
