[package]
name = "data-bridge-test"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Rust-powered test framework for data-bridge"

[lib]
name = "data_bridge_test"

[dependencies]
# Async runtime
tokio.workspace = true
futures.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true

# Zero-copy serialization
rkyv = { version = "0.7", features = ["validation"], optional = true }
bytecheck = { version = "0.6", optional = true }

# Error handling
thiserror.workspace = true
anyhow.workspace = true

# Utilities
chrono.workspace = true
regex.workspace = true
walkdir.workspace = true
jwalk.workspace = true
tracing.workspace = true
rand = "0.8"

# Flamegraph generation
inferno = "0.12"

# HTTP Server (for test server)
axum.workspace = true
tower.workspace = true

# HTTP client (for async fuzzer HTTP endpoint testing)
reqwest.workspace = true

# Optional: HTTP client for API testing
data-bridge-http = { path = "../data-bridge-http", optional = true }

[dev-dependencies]
reqwest.workspace = true
criterion = "0.5"

[[bench]]
name = "discovery_benchmark"
harness = false

[[bench]]
name = "serialization_benchmark"
harness = false

[features]
default = ["http", "rkyv"]
http = ["data-bridge-http"]
rkyv = ["dep:rkyv", "dep:bytecheck"]
