[package]
name = "data-bridge"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
name = "data_bridge"
crate-type = ["cdylib"]

[dependencies]
pyo3.workspace = true
pyo3-async-runtimes.workspace = true
tokio.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
futures.workspace = true
bson.workspace = true
mongodb.workspace = true
regex.workspace = true
rayon.workspace = true
once_cell.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
pythonize.workspace = true
rust_decimal.workspace = true

# Optional feature-gated dependencies
data-bridge-mongodb = { path = "../data-bridge-mongodb", optional = true }
data-bridge-http = { path = "../data-bridge-http", optional = true }
data-bridge-test = { path = "../data-bridge-test", optional = true }
data-bridge-postgres = { path = "../data-bridge-postgres", optional = true }
data-bridge-kv-client = { path = "../data-bridge-kv-client", optional = true }
data-bridge-api = { path = "../data-bridge-api", optional = true }
data-bridge-tasks = { path = "../data-bridge-tasks", optional = true }
data-bridge-common = { path = "../data-bridge-common" }

# Base64 encoding for binary data
base64 = "0.22"

# SQLx for PostgreSQL (only needed when postgres feature is enabled)
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres"], optional = true }

[features]
default = ["mongodb", "http", "test"]
mongodb = ["data-bridge-mongodb"]
http = ["data-bridge-http"]
test = ["data-bridge-test"]
postgres = ["data-bridge-postgres", "sqlx"]
kv = ["data-bridge-kv-client"]
api = ["data-bridge-api"]
tasks = ["data-bridge-tasks"]
tasks-nats = ["tasks", "data-bridge-tasks/nats"]
tasks-pubsub = ["tasks", "data-bridge-tasks/pubsub"]
tasks-redis = ["tasks", "data-bridge-tasks/redis"]
# Future features
# redis = ["data-bridge-redis"]
# rabbitmq = ["data-bridge-rabbitmq"]
