[package]
name = "ouroboros-agent-llm"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Unified LLM provider interface for ouroboros-agent (OpenAI, Anthropic Claude)"

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
async-trait.workspace = true
tracing.workspace = true
futures.workspace = true
chrono.workspace = true

# HTTP client
ouroboros-http = { path = "../ouroboros-http" }

# LLM providers
async-openai.workspace = true

# Agent core types
ouroboros-agent-core = { path = "../ouroboros-agent-core" }

[dev-dependencies]
tokio-test = "0.4"
