[package]
name = "ouroboros-mongodb"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
async-trait.workspace = true
tracing.workspace = true
futures.workspace = true

# MongoDB-specific
mongodb.workspace = true
bson.workspace = true
chrono.workspace = true

# Shared utilities
ouroboros-common = { path = "../ouroboros-common", features = ["mongodb-errors"] }
ouroboros-validation = { path = "../ouroboros-validation", features = ["bson"] }

[dev-dependencies]
tokio-test = "0.4"
