[package]
name = "ouroboros-sheet-db"
version = "0.1.0"
edition = "2021"

[dependencies]
ouroboros-kv = { path = "../ouroboros-kv" }
ouroboros-sheet-core = { path = "../ouroboros-sheet-core" }
ouroboros-common = { path = "../ouroboros-common" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1.40", features = ["full"] }
rayon = "1.10"
bincode = "1.3"

[dev-dependencies]
tempfile = "3.8"
